test/modules/imports/a.d
import b, b, b;

import does.not.exist; // error

static assert(foo()=="hello from module b!");
static assert(!is(typeof(bar))); // TODO

pragma(msg, foo()); // yay!